--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">
             <img
-              src="images/logo.svg"
+              src="/images/logo.svg"
               width="106"
               height="32"
               class="d-inline-block align-top"
@@ -56,7 +56,7 @@
           </div>
           <div class="col-md-6">
             <img
-            src="/images/Screen1Right.svg"
+            src="images/Screen1Right.svg"
             
             height="570"
             class="d-inline-block align-top"
