--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
           <div class="col-md-6">
             <img
-            src="images/Screen1Right.svg"
+            src="/images/Screen1Right.svg"
             
             height="570"
             class="d-inline-block align-top"
