--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
-            src="/images/logo.svg"
+            src="images/logo.svg"
             width="106"
             height="32"
             class="d-inline-block align-top"
