--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
           <div class="row">
             <div class="col-md-3">
               <div class="d-flex align-items-center">
-                <img src="images/fruits.png" width="106" height="100px" class="d-inline-block align-top rounded" alt="">
+                <img src="images/BG2.png" width="106" height="100px" class="d-inline-block align-top rounded" alt="">
                 <p class="textLike dark ml-2">SOFA</p>
               </div>
             </div>
