--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
               <h2 > Newsletter</h2>
             </div>
             <div class="col-md-5  d-flex  justify-content-end">
-              <textarea placeholder="Your email" class="height-50"></textarea>
+              <input type="email" class="form-control" id="recipient" placeholder="Email">
             </div>
             <div class="col-md-1 d-flex justify-content-end">
               <button class="btnLike bg-transparent border rounded font-white px-2 "> Surcribe</button>
