--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <!-- Your custom CSS file (if any) -->
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <!-- Content of your web page goes here -->
