--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
             <h5 class="InfoStatus">WebFlow Expert</h5>
             <h1 class="InfoTitle fontSize-72"> Making Digital Products</h2>
             <p class=" gray">Agency provides a full service range including technical skills, design, business understanding.</p>
-            <div class="row">
-                <div class="  col-md-4 d-flex justify-content-end explore">
-            <button class="btnLike orange font-white">Explore Work</button>
+            <div class="row d-flex justify-content-center">
+              
+                <div class="  col-md-4  explore">
+            <button class="btnLike orange  font-white">Explore Work</button>
                 </div>
-                <div class="col-md-6 d-flex justify-content-start">
+                <div class="col-md-6 ">
             <p class = " gray">Contact Me</p>
         </div>
                 </div>
