--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
 
 
   <div class="S1container mb-5">
-    <div class="row web-design-page d-flex web-design-page ">
-      <div class="col-md-4 S1-leftSide">
+    <div class="row web-design-page d-flex web-design-page  ">
+      <div class="col-md-4 S1-leftSide small-col-width">
         <h5 class="InfoStatus">WebFlow Expert</h5>
         <h1 class="InfoTitle fontSize-72"> Custom Web Design</h1>
           <p class=" gray">Read More</p>
 
       </div>
       <div class="col-md-1"></div>
-      <div class="col-md-3 bg-light h-55  rounded p-45 ">
+      <div class="col-md-3 small-col-width  bg-light h-55  rounded p-45 ">
         <div class="CircularImage">
           <img src="images/CombinedShape.png" class="img-fluid" alt="">
         </div>
@@ -112,7 +112,7 @@
         <p class="textLike dark mb-5 mb-remove  t-mt-remove">Full service range including technical skill design.</p>
       </div>
       <div
-        class="col-md-3 h-51 mt-5  rounded text-white border border-secondary rounded   collapse-margin-remove  p-45 pt-45">
+        class="col-md-3 small-col-width  h-51 mt-5  rounded text-white border border-secondary rounded   collapse-margin-remove  p-45 pt-45">
         <h4 class="h4Like white mt-5  t-mt-remove ">Accessibility</h4>
         <p class="textLike  gray  t-mt-remove">Business understanding. Ability to put themselves.</p>
       </div>
@@ -288,19 +288,19 @@
 
 
       <div
-        class="col-md-3 bg-light height mt-3 mb-3 rounded bg-image background-image bgURL1 d-flex flex-column align-items-start justify-content-end  -bg-image">
+        class="col-md-3 small-col-width  bg-light height mt-3 mb-3 rounded bg-image background-image bgURL1 d-flex flex-column align-items-start justify-content-end  -bg-image">
         <button class=" rounded-edges mb-4 mx-4 dark p-2">AgencyBox</button>
         <h3 class="InfoTitle font-white dark px-4 pb-4">SOFA</h3>
       </div>
 
 
       <div
-        class="col-md-3 bg-light height mt-3 mb-3 rounded bg-image background-image bgURL2 d-flex flex-column align-items-start justify-content-end  -bg-image">
+        class="col-md-3 small-col-width  bg-light height mt-3 mb-3 rounded bg-image background-image bgURL2 d-flex flex-column align-items-start justify-content-end  -bg-image">
         <button class=" rounded-edges mb-4 mx-4 dark p-2">Branding</button>
         <h3 class="InfoTitle font-white dark px-4 pb-4 ">KEYBOARD</h3>
       </div>
       <div
-        class="col-md-3 bg-light height mt-3 mb-3 rounded bg-image background-image bgURL3 d-flex flex-column align-items-start justify-content-end  -bg-image">
+        class="col-md-3 small-col-width  bg-light height mt-3 mb-3 rounded bg-image background-image bgURL3 d-flex flex-column align-items-start justify-content-end  -bg-image">
         <button class=" rounded-edges mb-4 mx-4 dark p-2">Illustration</button>
         <h3 class="InfoTitle font-white dark px-4 pb-4">WORK MEDIA</h3>
       </div>
@@ -313,19 +313,19 @@
 
 
       <div
-        class="col-md-3 bg-light height mt-3 mb-3 rounded bg-image background-image bgURL4 d-flex flex-column align-items-start justify-content-end  -bg-image">
+        class="col-md-3 small-col-width  bg-light height mt-3 mb-3 rounded bg-image background-image bgURL4 d-flex flex-column align-items-start justify-content-end  -bg-image">
         <button class=" rounded-edges mb-4 mx-4 dark p-2">MOTION</button>
         <h3 class="InfoTitle font-white dark px-4 pb-4">DDDONE</h3>
       </div>
 
 
       <div
-        class="col-md-3 bg-light height mt-3 mb-3 rounded bg-image background-image bgURL5 d-flex flex-column align-items-start justify-content-end  -bg-image">
+        class="col-md-3 small-col-width  bg-light height mt-3 mb-3 rounded bg-image background-image bgURL5 d-flex flex-column align-items-start justify-content-end  -bg-image">
         <button class=" rounded-edges mb-4 mx-4 dark p-2">Desing</button>
         <h3 class="InfoTitle font-white dark px-4 pb-4">ABSTRACT</h3>
       </div>
       <div
-        class="col-md-3 bg-light height mt-3 mb-3 rounded bg-image background-image bgURL6 d-flex flex-column align-items-start justify-content-end  -bg-image">
+        class="col-md-3 small-col-width  bg-light height mt-3 mb-3 rounded bg-image background-image bgURL6 d-flex flex-column align-items-start justify-content-end  -bg-image">
         <button class=" rounded-edges mb-4 mx-4 dark p-2">BRANDING</button>
         <h3 class="InfoTitle font-white dark px-4 pb-4">HandP</h3>
       </div>
@@ -516,7 +516,7 @@
       </div>
     </div>
     <div class="row  d-flex justify-content-center align-items-end web-design-page ">
-      <div class="col-md-4 no-column-padding   Price ">
+      <div class="col-md-4 small-col-width no-column-padding   Price ">
         <div class="card pricing-card bg-transparent mt-2 ">
           <div class="card-body">
             <h5 class="InfoStatus ">Consultation</h5>
@@ -549,7 +549,7 @@
         </div>
       </div>
 
-      <div class="col-md-4 no-column-padding  Price">
+      <div class="col-md-4 small-col-width no-column-padding  Price">
         <div class="card pricing-card  ">
           <div class="card-body">
             <button class="btnLike orang rounded-edge  font-white mb-4">Popular</button>
@@ -580,7 +580,7 @@
         </div>
       </div>
 
-      <div class="col-md-4 no-column-padding  Price">
+      <div class="col-md-4 small-col-width no-column-padding  Price">
         <div class="card pricing-card bg-transparent  ">
           <div class="card-body">
             <h5 class="InfoStatus ">Design-Code</h5>
@@ -716,7 +716,7 @@
 
     <hr class="dark-gray">
     <div class="row award-row">
-      <div class="col-md-3 ">
+      <div class="col-md-3 small-col-width  ">
         <div class="d-flex award-row">
           <img src="images/BG2.png" width="106" height="100px" class="" alt="">
           <p class="tlike dark ml-2">SOFA</p>
@@ -725,7 +725,7 @@
       <div class="col-md-6 text-center">
         <p class="tlike dark-gray mt-4">25 Oct, 2021</p>
       </div>
-      <div class="col-md-3 text-right">
+      <div class="col-md-3 small-col-width  text-right">
         <div class="d-flex align-items-center justify-content-end award-row">
           <p class="tlike dark mt-4">Awards</p>
           <img src="images/Bitmap (5).png" width="50" height="50px" alt="">
@@ -735,7 +735,7 @@
     <hr class="dark-gray">
 
     <div class="row d-flex award-row">
-      <div class="col-md-3">
+      <div class="col-md-3 small-col-width ">
         <div class="d-flex award-row ">
           <img src="images/BG3.png" width="106" height="100px" class="d-inline-block align-top rounded" alt="">
           <p class="tlike dark ml-2">KEYBOARD</p>
@@ -744,7 +744,7 @@
       <div class="col-md-6 text-center">
         <p class="tlike dark-gray mt-4">19 Oct, 2021</p>
       </div>
-      <div class="col-md-3 text-right">
+      <div class="col-md-3 small-col-width  text-right">
         <div class="d-flex align-items-center justify-content-end award-row">
           <p class="textLike dark mt-4 ">Awards</p>
           <img src="images/Bitmap (6).png" width="50" height="50px" alt="">
@@ -755,7 +755,7 @@
 
 
     <div class="row award-row">
-      <div class="col-md-3">
+      <div class="col-md-3 small-col-width ">
         <div class="d-flex award-row">
           <img src="images/BG4.png" width="106" height="100px" class="d-inline-block align-top rounded" alt="">
           <p class="tlike dark ml-2">WORK MEDIA</p>
@@ -764,7 +764,7 @@
       <div class="col-md-6 text-center">
         <p class="tlike dark-gray mt-4">7 Oct, 2021</p>
       </div>
-      <div class="col-md-3 text-right">
+      <div class="col-md-3 small-col-width  text-right">
         <div class="d-flex align-items-center justify-content-end award-row">
           <p class="tlike dark mt-4">Awards</p>
           <img src="images/Bitmap (7).png" width="50" height="50px" alt="">
