--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
       <div
         class="col-md-3 small-col-width  h-51 mt-5  rounded text-white border border-secondary rounded   collapse-margin-remove  p-45 pt-45">
-        <h4 class="h4Like white mt-5  t-mt-remove ">Accessibility</h4>
+        <h4 class="h4Like white mt-5  t-mt-removeA ">Accessibility</h4>
         <p class="textLike  gray  t-mt-remove">Business understanding. Ability to put themselves.</p>
       </div>
 
