--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div
         class="col-md-3 small-col-width  h-51 mt-5  rounded text-white border border-secondary rounded   collapse-margin-remove  p-45 pt-45">
         <h4 class="h4Like white mt-5  t-mt-removeA ">Accessibility</h4>
-        <p class="textLike  gray  t-mt-remove">Business understanding. Ability to put themselves.</p>
+        <p class="textLike  gray  t-mt-remove gml">Business understanding. Ability to put themselves.</p>
       </div>
 
     </div>
@@ -510,7 +510,7 @@
 
   <div class="container">
     <div class="row d-flex  ">
-      <div class="col-md-6 ">
+      <div class="col-md-6 small-col-width ">
         <h5 class="InfoStatus">WebFlow Expert</h5>
         <h1 class="InfoTitle dark fontSize-72"> Explore Pricing Plan</h1>
       </div>
