--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         <p class="textLike dark mb-5 mb-remove  t-mt-remove">Full service range including technical skill design.</p>
       </div>
       <div
-        class="col-md-3 small-col-width  h-51 mt-5  rounded text-white border border-secondary rounded   collapse-margin-remove  p-45 pt-45">
-        <h4 class="h4Like white mt-5  t-mt-removeA ">Accessibility</h4>
+        class="col-md-3 small-col-width  h-51 mt-5  rounded text-white border border-secondary rounded   collapse-margin-remove  p-45 pt-45  t-mt-removeA">
+        <h4 class="h4Like white mt-5  ">Accessibility</h4>
         <p class="textLike  gray  t-mt-remove gml">Business understanding. Ability to put themselves.</p>
       </div>
 
@@ -143,7 +143,7 @@
     <div class="row mb-3">
       <div class="col-md-4 S1-leftSide  ">
         <h5 class="InfoStatus">Service</h5>
-        <h2 class="InfoTitle lineh-60 fontSize-45"> How Webflow Experts Can Help </h2>
+        <h2 class="InfoTitle lineh-60 fontSize-45 "> How Webflow Experts Can Help </h2>
       </div>
 
       <div class="row mb-5 justify-content-center">
