--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
       </div>
       <div class="col-md-3 small-col-width  text-right">
         <div class="d-flex align-items-center justify-content-end award-row">
-          <p class="textLike dark mt-4 ">Awards</p>
+          <p class="tlike dark mt-4 ">Awards</p>
           <img src="images/Bitmap (6).png" width="50" height="50px" alt="">
         </div>
       </div>
